Implement Spell Visual Base, Missle, and Motion data handling (#157)
The Visual Base tab gives the properties for the currently selected Spell Visual.

The Missile tab allows you to select the Spell Visual Effect to use for the Spell Missile. This could be improved because you cannot currently edit the visual effect from this UI, however you can edit it from the DB or if it is associated with a Spell Visual Kit.

The Kits & Effects tab shows all the spell visual kits, effects, and attachments associated with the spell visual.

The Motion Properties tab defines properties about the motion path of the spell.

The Motion Script tab allows you to write a Lua script to control the behaviour of the missile, as well as define the number of missiles.

There is a lot that could be improved with the editing of spell visuals but this is a significant improvement over the previous iteration.

Only patch 3.3.5 is supported in these new tabs.

This requires the spell missile and motion DBCs imported to SQL.

--- a/Documentation/Languages/enUS.xaml
+++ b/Documentation/Languages/enUS.xaml
@@ -268,6 +268,52 @@
 	<system:String x:Key="VisualAttachOffsetPitch">Attachment Offset Pitch</system:String>
 	<system:String x:Key="VisualAttachOffsetRoll">Attachment Offset Roll</system:String>
 	<system:String x:Key="ConvertEffectToAttach">Convert Effect to Attachment</system:String>
+	<system:String x:Key="VisualMissileMotionId">Id</system:String>
+	<system:String x:Key="VisualMissileMotionName">Name</system:String>
+	<system:String x:Key="VisualMissileMotionFlags">Flags</system:String>
+	<system:String x:Key="VisualMissileMotionMissileCount">Missile Count</system:String>
+	<system:String x:Key="VisualMissileMotionScript">Script (Lua)</system:String>
+	<system:String x:Key="VisualHasMissile">Has Missile</system:String>
+	<system:String x:Key="VisualMissileModel">Missile Model</system:String>
+	<system:String x:Key="VisualMissilePathType">Missile Path Type</system:String>
+	<system:String x:Key="VisualMissileDestinationAttachment">Destination Attachment</system:String>
+	<system:String x:Key="VisualMissileSound">Missile Sound</system:String>
+	<system:String x:Key="VisualAnimEventSoundId">Animation Event Sound</system:String>
+	<system:String x:Key="VisualMissileAttachment">Missile Attachment</system:String>
+	<system:String x:Key="VisualMissileFollowGroundHeight">Follow Ground Height</system:String>
+	<system:String x:Key="VisualMissileFollowDropSpeed">Follow Drop Speed</system:String>
+	<system:String x:Key="VisualMissileFollowApproach">Follow Approach</system:String>
+	<system:String x:Key="VisualMissileFollowGroundFlags">Follow Ground Flags</system:String>
+	<system:String x:Key="VisualMissileMotion">Missile Motion</system:String>
+	<system:String x:Key="VisualMissileCastOffsetX">Missile Cast Offset X</system:String>
+	<system:String x:Key="VisualMissileCastOffsetY">Missile Cast Offset Y</system:String>
+	<system:String x:Key="VisualMissileCastOffsetZ">Missile Cast Offset Z</system:String>
+	<system:String x:Key="VisualMissileImpactOffsetX">Missile Impact Offset X</system:String>
+	<system:String x:Key="VisualMissileImpactOffsetY">Missile Impact Offset Y</system:String>
+	<system:String x:Key="VisualMissileImpactOffsetZ">Missile Impact Offset Z</system:String>
+	<system:String x:Key="MissileEntryFlags">Flags</system:String>
+	<system:String x:Key="MissileEntryDefaultPitchMin">Default Pitch Min</system:String>
+	<system:String x:Key="MissileEntryDefaultPitchMax">Default Pitch Max</system:String>
+	<system:String x:Key="MissileEntryDefaultSpeedMin">Default Speed Min</system:String>
+	<system:String x:Key="MissileEntryDefaultSpeedMax">Default Speed Max</system:String>
+	<system:String x:Key="MissileEntryGravity">Gravity</system:String>
+	<system:String x:Key="MissileEntryCollisionRadius">Collision Radius</system:String>
+	<system:String x:Key="MissileEntryRandomiseFacingMin">Randomise Facing Min</system:String>
+	<system:String x:Key="MissileEntryRandomiseFacingMax">Randomise Facing Max</system:String>
+	<system:String x:Key="MissileEntryRandomisePitchMin">Randomise Pitch Min</system:String>
+	<system:String x:Key="MissileEntryRandomisePitchMax">Randomise Pitch Max</system:String>
+	<system:String x:Key="MissileEntryRandomiseSpeedMin">Randomise Speed Min</system:String>
+	<system:String x:Key="MissileEntryRandomiseSpeedMax">Randomise Speed Max</system:String>
+	<system:String x:Key="MissileEntryMaxDuration">Max Duration</system:String>
+	<system:String x:Key="VisualSave">Save</system:String>
+	<system:String x:Key="VisualNew">New</system:String>
+	<system:String x:Key="VisualDelete">Delete</system:String>
+	<system:String x:Key="VisualBase">Base</system:String>
+	<system:String x:Key="VisualMissileModelTab">Missile Model</system:String>
+	<system:String x:Key="VisualKitsAndEffects">Kits &amp; Effects</system:String>
+	<system:String x:Key="VisualMotion">Motion</system:String>
+	<system:String x:Key="VisualScript">Script</system:String>
+	<system:String x:Key="VisualMapBuilder">Map Builder</system:String>
 	<!--#endregion-->
 	
 	<!--#region MapBuilder-->
